# SmartLeave

./: .env.example  .gcloudignore  .gitignore  README.md  USE_CASES.md  pyproject.toml  smart_leave_agent_documentation.md
gcp/: Dockerfile  cloudbuild.yaml
models/: employee.py  leave.py
src/: settings.py
src/.adk/: session.db
src/agents/calculation_agent/: agent.py  prompt.py  tools.py
src/agents/employee_agent/: agent.py  prompt.py  tools.py
src/agents/holiday_agent/: agent.py  prompt.py  tools.py
src/agents/leave_calculation_agent/: agent.py  prompt.py  tools.py
src/agents/leave_submission_agent/: agent.py  prompt.py
src/agents/submission_agent/: agent.py  prompt.py  tools.py
src/config/: settings.py
src/database/: connection.py  init_db.py  operations.py  seed_data.py
src/nodes/: calculation_nodes.py  confirmation_classifier.py  formatting_nodes.py  hr_node.py  intent_router.py  intent_slot_extractor.py  lookup_nodes.py  submission_nodes.py  validation_nodes.py
src/shared/: confirmation_classifier.py  deterministic_nodes.py  intent_router.py  intent_slot_extractor.py  prompts.py
tests/: test_database.py
tests/agents/: test_employee_agent.py  test_holiday_agent.py  test_leave_calculation_agent.py  test_leave_submission_agent.py
tests/multi_agent/: test_parallel_workflow.py  test_sequential_workflow.py
tests/sub_agents/: test_employee_agent.py  test_holiday_agent.py  test_leave_calculation_agent.py  test_leave_submission_agent.py
tests/workflows/: test_parallel_workflow.py  test_sequential_workflow.py
(+18 files in other folders)
