[project]
name = "leaves-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=2.3.0",
    "google-genai>=2.9.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "setuptools>=82.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pyright]
extraPaths = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
